--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap'); */
+
 :root {
-  font-family: system-ui, Inter, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Inter, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 14px;
