--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -1,17 +1,20 @@
 .logo {
-    background-color: #59B17A;
-    width: 172px;
+  background-color: #59b17a;
+  width: 172px;
 }
 .logosvg {
-    stroke: #FFFFFF;
+  stroke: #ffffff;
 }
 .logoLink {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 14px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
 }
 .logo_text {
-    color: #FFFFFF;
+  font-weight: 600;
+  font-size: 20px;
+  letter-spacing: -0.03em;
+  color: #fff;
 }
