--- a/src/components/Home/Reviews/Reviews.module.css
+++ b/src/components/Home/Reviews/Reviews.module.css
@@ -5,6 +5,8 @@
     margin-top: 120px;
     text-align: center;
     width: 1202px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .reviewsTitle {
